[package]
name = "port"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
fs-err = "2.11.0"
gray_matter = "0.2.8"
inkjet = { version = "0.10.5", features = ["theme"] }
pulldown-cmark = "0.10.3"
rss = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1.20.0"
time = { version = "0.3.41", features = ["local-offset", "serde", "macros", "formatting", "parsing"] }
walkdir = "2.5.0"
